--- a/package.json
+++ b/package.json
@@ -11,23 +11,28 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^5.2.2",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@react-page/editor": "^5.4.5",
     "@react-page/plugins-image": "^5.4.5",
     "@react-page/plugins-slate": "^5.4.5",
+    "@sendgrid/mail": "^8.1.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.43.4",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.7",
     "framer-motion": "^11.2.10",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
+    "react-qr-code": "^2.0.18",
     "zod": "^3.23.8"
   },
   "devDependencies": {
