--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -23,9 +24,11 @@
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.7",
     "framer-motion": "^11.2.10",
+    "fuse.js": "^7.1.0",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.3.0",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
@@ -33,6 +36,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.5",
     "react-qr-code": "^2.0.18",
+    "recharts": "^3.2.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
