--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "deploy:do": "echo 'Deploy to DigitalOcean App Platform'"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
