--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@supabase/supabase-js": "^2.43.4",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.7",
+    "dotenv": "^17.2.3",
     "framer-motion": "^11.2.10",
     "fuse.js": "^7.1.0",
     "jspdf": "^3.0.3",
