Fix Supabase client issues and Node.js compatibility
- Fixed 'supabaseKey is required' error by simplifying Supabase client
- Removed auth helpers dependency causing Edge Runtime issues
- Updated Node.js version to 18.x for DigitalOcean compatibility
- Added comprehensive environment variable logging
- Created DigitalOcean deployment configuration
- Updated Next.js config for better runtime compatibility
- Added .nvmrc and build scripts for consistent Node.js version
- Fixed hero section centering and conference date/venue display
- Implemented complete speaker management system with database integration
- Added admin CRUD interface for speakers management
- Updated conference date to May 26-28, 2026 and venue to Labadi Beach Hotel

--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "postbuild": "next-sitemap",
+    "build:do": "NODE_ENV=production next build",
     "deploy:do": "echo 'Deploy to DigitalOcean App Platform'"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": "18.x",
     "npm": ">=9.0.0"
   },
   "dependencies": {
