--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,4 +1,4 @@
-name: aetc-2026
+name: aetc-2026-app
 services:
 - name: web
   source_dir: /
@@ -6,13 +6,10 @@ services:
     repo: mdYoungDOer/aetc-app
     branch: main
   run_command: npm start
-  build_command: npm run build
   environment_slug: node-js
   instance_count: 1
   instance_size_slug: basic-xxs
   http_port: 3000
-  routes:
-  - path: /
   envs:
   - key: NODE_ENV
     value: production
@@ -34,3 +31,16 @@ services:
     value: ${PAYSTACK_SECRET_KEY}
   - key: NEXT_PUBLIC_SITE_URL
     value: ${NEXT_PUBLIC_SITE_URL}
+  - key: NEXT_PUBLIC_SUPABASE_STORAGE_BUCKET
+    value: ${NEXT_PUBLIC_SUPABASE_STORAGE_BUCKET}
+  - key: NEXTAUTH_URL
+    value: ${NEXTAUTH_URL}
+  - key: NEXT_PUBLIC_APP_ENV
+    value: ${NEXT_PUBLIC_APP_ENV}
+  health_check:
+    http_path: /
+    initial_delay_seconds: 10
+    period_seconds: 10
+    timeout_seconds: 5
+    unhealthy_threshold: 3
+    healthy_threshold: 2
