Fix Node.js and npm compatibility for DigitalOcean
- Updated Node.js engine to 20.x for better DigitalOcean compatibility
- Reduced npm requirement to >=9.0.0 to avoid npm@11.6.1 conflicts
- Added buildpacks.txt to specify heroku/nodejs buildpack
- Enhanced do-build.sh with Node.js version detection and fallback
- Updated .nvmrc and .node-version to use Node.js 20
- Added npm configuration to disable fund/audit for faster builds
- Changed DigitalOcean build command to use npm install instead of npm ci
- Fixed npm version compatibility issues with Node.js 20.0.0

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "deploy:do": "echo 'Deploy to DigitalOcean App Platform'"
   },
   "engines": {
-    "node": ">=18.0.0 <=20.0.0",
-    "npm": ">=8.0.0"
+    "node": "20.x",
+    "npm": ">=9.0.0"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
