--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -7,7 +7,7 @@ services:
     branch: main
   run_command: npm start
   environment_slug: node-js
-  build_command: npm ci && npm run build
+  build_command: npm install && npm run build
   instance_count: 1
   instance_size_slug: basic-xxs
   http_port: 3000
