--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@sendgrid/mail": "^8.1.6",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.43.4",
+    "@types/qrcode": "^1.5.5",
     "date-fns": "^3.6.0",
     "dompurify": "^3.2.7",
     "dotenv": "^17.2.3",
